--- a/team.html
+++ b/team.html
@@ -84,7 +84,7 @@
 
                     <div class="team-roles">
                         <span class="team-members-roles">
-                            <h3>lead-Assistent/Band Coach</h3>
+                            <h3>lead-Assistant/Band Coach</h3>
                         </span>
 
                         <h4>Head Player, Drummer</h4>
