--- a/team.html
+++ b/team.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar-container">
         <div class="fade-in link-container">
-            <a class="nav-link" href="/"><img class="nav-logo" src="images/imperial1.png"></a>
+            <a class="nav-link" href="home.html"><img class="nav-logo" src="images/imperial1.png"></a>
         </div>
 
         <div class="fade-in link-container">
@@ -18,11 +18,11 @@
         </div>
 
         <div class="fade-in link-container">
-            <a class="nav-link" href="/">Team</a>
+            <a class="nav-link" href="team.html">Team</a>
         </div>
 
         <div class="fade-in link-container">
-            <a class="nav-link" href="/">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
         </div>
 
         <div class="fade-in link-container">
