--- a/team.html
+++ b/team.html
@@ -126,7 +126,7 @@
 
                     <div class="team-roles">
                         <span class="team-members-roles">
-                            <h3>Head Player Coach</h3>
+                            <h3>Tail Player Coach</h3>
                         </span>
 
                         <h4>Tail Player</h4>
